--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
