--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "react-top-loading-bar": "^2.3.1",
     "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
